# SDK-Linux

./: CMakeLists.txt  FindCURL.cmake  Findalsa.cmake  Findgstreamer-1.0.cmake  Findgstreamer-app-1.0.cmake  Findlibcrypto.cmake  Findopus.cmake  Findportaudio.cmake  Findsqlite3.cmake  README.md  build.sh  toolchain.txt
IFLYOSInterface/: CMakeLists.txt
IFLYOSInterface/include/: IFLYOSInterface.h
IFLYOSInterface/src/: IFLYOSInterface.cpp
IFLYOSUmbrella/: CMakeLists.txt  IFLYOSUmbrella.cpp  README.md
MicAgent/: CMakeLists.txt  MicAgent.cpp  NetworkMonitor.cpp  NetworkMonitor.h  NetworkSetter.cpp  NetworkSetter.h  PCMPlayer.cpp  PCMPlayer.h  README.md  Recorder.cpp  Recorder.h  cae_intf.h  jnh.h  quiet.h  snowboy-detect.h  sonic.h  syskey.cpp  syskey.h  tdmin_interface.c  tdmin_interface.h
patchFiles/: SampleAppCtrl.sh  ivsConfig.json  leading.pcm  numbers.pcm  start.sh
